# gtkmonop

./: ChangeLog  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.in  gtkmonop.spec
debian/: changelog  control  files  gtkmonop.6  gtkmonop.postinst.debhelper  gtkmonop.prerm.debhelper  gtkmonop.substvars  manpages  rules
debian/gtkmonop/DEBIAN/: control  md5sums  postinst  prerm
debian/gtkmonop/usr/games/: gtkmonop
debian/gtkmonop/usr/lib/menu/: gtkmonop
debian/gtkmonop/usr/share/pixmaps/: gtkmonop.xpm
macros/: Makefile
po/: ChangeLog  gmonop.pot
src/: Makefile.am  Makefile.in  aboutwin.c  aboutwin.h  assetbox.c  assetbox.h  auctionbox.c  auctionbox.h  cardview.c  cardview.h  client.c  client.h  estateview.c  estateview.h  game_functions.c  game_functions.h  gdk_functions.c  gdk_functions.h  main.c  mainwin.c  mainwin.h  misc_functions.c  misc_functions.h  notebook.c  notebook.h  prefswin.c  prefswin.h  structs.h  stub.h  theme.c  theme.h  tradebox.c  tradebox.h  xmlparse.c  xmlparse.h  xpms.h
themes/gradient/: theme.conf
